WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292640
REGRESSION (
294541@main
): Writing Tools icon shows up for unrelated menu items
https://bugs.webkit.org/show_bug.cgi?id=292640
Summary
REGRESSION (294541@main): Writing Tools icon shows up for unrelated menu items
Aditya Keerthi
Reported
2025-05-06 16:28:23 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-06 16:28:33 PDT
<
rdar://problem/150804805
>
Aditya Keerthi
Comment 2
2025-05-06 16:32:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45034
EWS
Comment 3
2025-05-06 16:47:42 PDT
Committed
294584@main
(fe029dddb5b7): <
https://commits.webkit.org/294584@main
> Reviewed commits have been landed. Closing PR #45034 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug