REGRESSION (294541@main): Writing Tools icon shows up for unrelated menu items https://bugs.webkit.org/show_bug.cgi?id=292640 rdar://150804805

Reviewed by Abrar Rahman Protyasha and Wenson Hsieh.

* Source/WebKit/Platform/mac/MenuUtilities.mm:
(WebKit::symbolNameForAction):

Return `nil` rather than falling into the Writing Tools item.

Canonical link: https://commits.webkit.org/294584@main